apps/hello-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-path-app1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: hello-world-path-app1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-path-app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world-path-app1
  template:
    metadata:
      labels:
        app: hello-world-path-app1
    spec:
      containers:
      - name: hello-world-path
        image: d3or/hello-world-path
        ports:
        - containerPort: 3000
