apps/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fanout
  annotations:
spec:
  ingressClassName: nginx
  rules:
  ## Replace test.modulenft.xyz with your domain!
  - host: dev.local.me
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: hello-world-path-app1
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: hello-world-path-app2
            port:
              number: 80
